my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/931002-1.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/931002-1.c:3:1: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
    3 | f (void (*func) ())
      | ^
      | int
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/931002-1.c:8:1: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
    8 | main ()
      | ^
      | int
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/931002-1.c:11:5: error: function definition is not allowed here
   11 |     {
      |     ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/931002-1.c:15:5: error: function definition is not allowed here
   15 |     {
      |     ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/931002-1.c:20:5: error: function definition is not allowed here
   20 |     {
      |     ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/931002-1.c:24:3: error: call to undeclared function 't1'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   24 |   t1 ();
      |   ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/931002-1.c:26:3: error: call to undeclared function 't2'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   26 |   t2 ();
      |   ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/931002-1.c:28:3: error: call to undeclared library function 'exit' with type 'void (int) __attribute__((noreturn))'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   28 |   exit (0);
      |   ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/931002-1.c:28:3: note: include the header <stdlib.h> or explicitly provide a declaration for 'exit'
8 errors generated.
